--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,21 +5,39 @@ output:
     keep_md: true
 ---
 
-
 ## Loading and preprocessing the data
 
+```{r, echo=TRUE}
+activityData <- read.csv("~/GitHub/RepData_PeerAssessment1/activity.csv")
 
+# date data to date format
+activityData$date <- as.Date(activityData$date)
+```
 
 ## What is mean total number of steps taken per day?
 
-
+```{r, echo=TRUE}
+meanStepsPerDay <- aggregate(steps ~ date, activityData, mean)
+meanStepsPerDay
+```
 
 ## What is the average daily activity pattern?
 
+```{r}
+
+```
 
 
 ## Imputing missing values
 
+```{r}
+
+```
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+```{r}
+
+```
+
