--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -17,8 +17,26 @@ activityData$date <- as.Date(activityData$date)
 ## What is mean total number of steps taken per day?
 
 ```{r, echo=TRUE}
-meanStepsPerDay <- aggregate(steps ~ date, activityData, mean)
-meanStepsPerDay
+# 1. Calculate the total number of steps taken per day
+TotalStepsPerDay <- aggregate(steps ~ date, activityData, sum, na.action = na.omit)
+
+# 2. Make a histogram of the total number of steps taken each day
+hist(TotalStepsPerDay$steps, xlab = "Total number of steps taken per day", main = "Total number of steps taken per day")
+
+# 3. Calculate and report the mean and median of the total number of steps taken per day
+
+MeanStepsPerDay <- aggregate(steps ~ date, activityData, mean, na.action = na.omit)
+MedianStepsPerDay <- aggregate(steps ~ date, activityData, median, na.action = na.omit)
+```
+
+The mean number of steps per day is:
+```{r}
+MeanStepsPerDay
+```
+
+The median number of steps per day is:
+```{r}
+MedianStepsPerDay
 ```
 
 ## What is the average daily activity pattern?
