--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -13,6 +13,10 @@ activityData <- read.csv("~/GitHub/RepData_PeerAssessment1/activity.csv")
 
 # 2. Process/transform the data (if necessary) into a format suitable for your analysis
 activityData$date <- as.Date(activityData$date)
+
+# load packages required
+library(ggplot2)
+library(dplyr)
 ```
 
 ## What is mean total number of steps taken per day?
@@ -71,8 +75,8 @@ sum(is.na(activityData$steps))
 # create copy of original data to modify
 activityDataComplete <- activityData
 
-# replace NAs with median steps for all days ("0")
-activityDataComplete[is.na(activityDataComplete$steps),"steps"] <- 0
+# replace NAs with median steps for all days 
+activityDataComplete[is.na(activityDataComplete$steps),"steps"] <- median(activityDataComplete$steps)
 ```
 
 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
@@ -115,18 +119,22 @@ head(activityDataComplete)
 2. Make a panel plot containing a time series plot (i.e. \color{red}{\verb|type = "l"|}type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
 
 ```{r}
-library(ggplot2)
-library(dplyr)
-library(data.table)
+
+ggplot(activityDataComplete, aes(x = interval, y = steps, color = weekdayOrweekend)) + 
+  geom_line() + 
+  labs(title = "Average daily steps", 
+       x = "Interval", 
+       y = "Average number of steps") + 
+  facet_wrap(~weekdayOrweekend, ncol = 1, nrow = 2)
 
 
 activityDataComplete$Mean <- lapply(activityDataComplete$steps, mean)
 
-activityDataComplete[is.na(steps), "steps"] <- activityDataComplete[, c(lapply(.SD, median, na.rm = TRUE)), .SDcols = c("steps")]
-activityDataCompleteInterval <- activityDataComplete[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval, `weekdayOrweekend`)] 
 
-plot(AverageStepsAllDaysComplete$interval, AverageStepsAllDaysComplete$steps, xlab = "Intervals (5-minutes)", ylab = "Average number of steps", main = "Average number of steps by interval" , type = "l", lwd=2, col = "lightblue")
-
+par(mfrow = c(2,1))
+with(activityDataComplete, {
+	plot(interval, MeanStepsPerWeekDay, xlab = "Intervals (5-minutes)", ylab = "Average number of steps", main = "Average number of steps by interval" , type = "l", lwd=2, col = "lightblue")
+	plot(interval, MeanStepsPerWeekendDay, xlab = "Intervals (5-minutes)", ylab = "Average number of steps", main = "Average number of steps by interval" , type = "l", lwd=2, col = "lightblue")})
 ```
 
 
